# MIRA_Public

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  benchmark_candidates.jsonl  docker-compose.yml  pyproject.toml
configs/: default.yaml
demo-assets/: README.md  make_demo_video.py  manifest.json  narration.txt
demo-assets/audio/: narration.m4a
demo-assets/output/: subtitles.srt
deploy/: Caddyfile
docs/: cli-reasoning-evals.md  demo-video.md  deploy-digitalocean.md
docs/archive/: IMPLELEMTATION.md  PLANNING.md  REFACTOR_PLAN.md  TOOLS_RESEARCH.md
docs/archive/experimental/ToDo/: fastrelaxer.py  iam_analyzer.py  pdb_redo.py
docs/archive/experimental/ToDo/pr_utils/: bc.py  bindcraft_score.py  biopython_utils.py  pyrosetta_utils.py
eval-results/cli-reasoning-minimax-36/: report.md  results.csv  results.jsonl  summary.json
eval-results/cli-reasoning-offline-72/: report.md  results.csv  results.jsonl  summary.json
evals/: README.md
scripts/: build_eval_benchmark.py  eval_cli_reasoning.py  extract_tool_metadata.py  install_foldingdiff_cpu.sh  install_proteinmpnn_cpu.sh  ncbi_fetch.py  rcsb_search.py  run_cli_reasoning_eval.py
src/structagent/: __init__.py  agent.py  async_utils.py  batch.py  binder_design.py  cli.py  design_adapters.py  display.py  metrics.py  orchestrator.py  profiles.py  project_tools.py  projects.py  prompts.py  providers.py  registry.py  subagent.py  synthesis.py  themes.py  tool_metadata.py
src/structagent/api/: __init__.py  server.py
src/structagent/jobs/: __init__.py  models.py  runner.py  store.py
src/structagent/tools/: __init__.py  alignment.py  annotations.py  bfactor.py  charge.py  conservation.py  contacts.py  dynamics.py  foldseek.py  interface.py  interface_energy.py  pyrosetta_interface.py  ramachandran.py  relaxation.py  renumber_pdb.py  sasa.py  secondary_structure.py  structure_io.py
src/structagent/web/: __init__.py  server.py  session.py  tool_processor.py
src/structagent/web/static/: index.html
src/structagent/web/static/css/: main.css
tests/: diagnose_contacts.py  test_agent.py  test_agent_pyrosetta_workflow.py  test_api.py  test_batch.py  test_cli.py  test_dynamics_integration.py  test_jobs.py  test_profiles.py  test_prompts.py  test_providers.py  test_registry.py  test_tools.py
webapp/: index.html  package-lock.json  package.json
webapp/src/: App.tsx  api.ts  components.tsx  styles.css
(+3 files in other folders)
