[project]
name = "mira"
version = "0.1.0"
description = "Molecular Reasoning and Intelligence Agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
urls = { Repository = "https://github.com/joshgilligan17/MIRA_Public", Homepage = "https://github.com/joshgilligan17/MIRA_Public" }
authors = [
    { name = "MIRA Contributors" },
]
keywords = ["protein", "structure", "biology", "agent", "AI", "molecular", "structural-biology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "biopython>=1.81",
    "gemmi>=0.6.0",
    "freesasa>=2.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "openai>=1.12.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "prody>=2.0.0",
    "pyfiglet>=1.0.0",
]

[project.scripts]
mira = "structagent.cli:cli"

[project.optional-dependencies]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structagent"]

[tool.pytest.ini_options]
markers = [
    "network: tests requiring external network access",
    "pyrosetta: tests requiring PyRosetta",
    "prody: tests requiring ProDy",
]

[tool.ruff]
line-length = 120
force-exclude = true
extend-exclude = [
    "src/structagent/binder_design.py",
    "src/structagent/web",
    "tests/diagnose_contacts.py",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = [
    "F401",  # historical unused imports remain in experimental edges
    "F541",  # legacy constant f-strings
    "F841",  # legacy unused locals in experimental paths
    "F811",  # tests sometimes import locally for readability
    "E402",  # a few legacy modules import lazily at module scope
]
